--- a/src/views/_head.ejs
+++ b/src/views/_head.ejs
@@ -1,136 +1,177 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel="shortcut icon" type="image/png" href="/images/node-icon.png" />
 
-    <!-- Bootstrap & Bootswatch -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.3/darkly/bootstrap.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <link rel="shortcut icon" type="image/png" href="/images/node-icon.png" />
 
-    <!-- Fontawesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" crossorigin="anonymous" />
-    <!-- Weather Icons -->
-    <link rel="stylesheet" href="/open-weather-icons/css/open-weather-icons.css" />
+  <!-- Bootstrap & Bootswatch -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.1.3/darkly/bootstrap.min.css"
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- Custom styles -->
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+  <!-- Fontawesome icons -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" crossorigin="anonymous" />
+  <!-- Weather Icons -->
+  <link rel="stylesheet" href="/open-weather-icons/css/open-weather-icons.css" />
 
-    <% if (process.env.APPINSIGHTS_INSTRUMENTATIONKEY) { %>
+  <!-- Custom styles -->
+  <link rel="stylesheet" href="/stylesheets/style.css" />
+
+  <% if (process.env.APPINSIGHTS_INSTRUMENTATIONKEY) { %>
     <script type="text/javascript">
       <!-- prettier-ignore -->
-      !function(T,l,y){var S=T.location,k="script",D="instrumentationKey",C="ingestionendpoint",I="disableExceptionTracking",E="ai.device.",b="toLowerCase",w="crossOrigin",N="POST",e="appInsightsSDK",t=y.name||"appInsights";(y.name||T[e])&&(T[e]=t);var n=T[t]||function(d){var g=!1,f=!1,m={initialize:!0,queue:[],sv:"5",version:2,config:d};function v(e,t){var n={},a="Browser";return n[E+"id"]=a[b](),n[E+"type"]=a,n["ai.operation.name"]=S&&S.pathname||"_unknown_",n["ai.internal.sdkVersion"]="javascript:snippet_"+(m.sv||m.version),{time:function(){var e=new Date;function t(e){var t=""+e;return 1===t.length&&(t="0"+t),t}return e.getUTCFullYear()+"-"+t(1+e.getUTCMonth())+"-"+t(e.getUTCDate())+"T"+t(e.getUTCHours())+":"+t(e.getUTCMinutes())+":"+t(e.getUTCSeconds())+"."+((e.getUTCMilliseconds()/1e3).toFixed(3)+"").slice(2,5)+"Z"}(),iKey:e,name:"Microsoft.ApplicationInsights."+e.replace(/-/g,"")+"."+t,sampleRate:100,tags:n,data:{baseData:{ver:2}}}}var h=d.url||y.src;if(h){function a(e){var t,n,a,i,r,o,s,c,u,p,l;g=!0,m.queue=[],f||(f=!0,t=h,s=function(){var e={},t=d.connectionString;if(t)for(var n=t.split(";"),a=0;a<n.length;a++){var i=n[a].split("=");2===i.length&&(e[i[0][b]()]=i[1])}if(!e[C]){var r=e.endpointsuffix,o=r?e.location:null;e[C]="https://"+(o?o+".":"")+"dc."+(r||"services.visualstudio.com")}return e}(),c=s[D]||d[D]||"",u=s[C],p=u?u+"/v2/track":d.endpointUrl,(l=[]).push((n="SDK LOAD Failure: Failed to load Application Insights SDK script (See stack for details)",a=t,i=p,(o=(r=v(c,"Exception")).data).baseType="ExceptionData",o.baseData.exceptions=[{typeName:"SDKLoadFailed",message:n.replace(/\./g,"-"),hasFullStack:!1,stack:n+"\nSnippet failed to load ["+a+"] -- Telemetry is disabled\nHelp Link: https://go.microsoft.com/fwlink/?linkid=2128109\nHost: "+(S&&S.pathname||"_unknown_")+"\nEndpoint: "+i,parsedStack:[]}],r)),l.push(function(e,t,n,a){var i=v(c,"Message"),r=i.data;r.baseType="MessageData";var o=r.baseData;return o.message='AI (Internal): 99 message:"'+("SDK LOAD Failure: Failed to load Application Insights SDK script (See stack for details) ("+n+")").replace(/\"/g,"")+'"',o.properties={endpoint:a},i}(0,0,t,p)),function(e,t){if(JSON){var n=T.fetch;if(n&&!y.useXhr)n(t,{method:N,body:JSON.stringify(e),mode:"cors"});else if(XMLHttpRequest){var a=new XMLHttpRequest;a.open(N,t),a.setRequestHeader("Content-type","application/json"),a.send(JSON.stringify(e))}}}(l,p))}function i(e,t){f||setTimeout(function(){!t&&m.core||a()},500)}var e=function(){var n=l.createElement(k);n.src=h;var e=y[w];return!e&&""!==e||"undefined"==n[w]||(n[w]=e),n.onload=i,n.onerror=a,n.onreadystatechange=function(e,t){"loaded"!==n.readyState&&"complete"!==n.readyState||i(0,t)},n}();y.ld<0?l.getElementsByTagName("head")[0].appendChild(e):setTimeout(function(){l.getElementsByTagName(k)[0].parentNode.appendChild(e)},y.ld||0)}try{m.cookie=l.cookie}catch(p){}function t(e){for(;e.length;)!function(t){m[t]=function(){var e=arguments;g||m.queue.push(function(){m[t].apply(m,e)})}}(e.pop())}var n="track",r="TrackPage",o="TrackEvent";t([n+"Event",n+"PageView",n+"Exception",n+"Trace",n+"DependencyData",n+"Metric",n+"PageViewPerformance","start"+r,"stop"+r,"start"+o,"stop"+o,"addTelemetryInitializer","setAuthenticatedUserContext","clearAuthenticatedUserContext","flush"]),m.SeverityLevel={Verbose:0,Information:1,Warning:2,Error:3,Critical:4};var s=(d.extensionConfig||{}).ApplicationInsightsAnalytics||{};if(!0!==d[I]&&!0!==s[I]){var c="onerror";t(["_"+c]);var u=T[c];T[c]=function(e,t,n,a,i){var r=u&&u(e,t,n,a,i);return!0!==r&&m["_"+c]({message:e,url:t,lineNumber:n,columnNumber:a,error:i}),r},d.autoExceptionInstrumented=!0}return m}(y.cfg);function a(){y.onInit&&y.onInit(n)}(T[t]=n).queue&&0===n.queue.length?(n.queue.push(a),n.trackPageView({})):a()}(window,document,{
-      src: "https://js.monitor.azure.com/scripts/b/ai.2.min.js", // The SDK URL Source
-      // name: "appInsights", // Global SDK Instance name defaults to "appInsights" when not supplied
-      // ld: 0, // Defines the load delay (in ms) before attempting to load the sdk. -1 = block page load and add to head. (default) = 0ms load after timeout,
-      // useXhr: 1, // Use XHR instead of fetch to report failures (if available),
-      crossOrigin: "anonymous", // When supplied this will add the provided value as the cross origin attribute on the script tag
-      // onInit: null, // Once the application insights instance has loaded and initialized this callback function will be called with 1 argument -- the sdk instance (DO NOT ADD anything to the sdk.queue -- As they won't get called)
-      cfg: { // Application Insights Configuration
-          instrumentationKey: "<%=process.env.APPINSIGHTS_INSTRUMENTATIONKEY%>"
-          /* ...Other Configuration Options... */
-      }});
-    </script>
-    <% } %>
+      !function (T, l, y) {
+        var S = T.location, k = "script", D = "instrumentationKey", C = "ingestionendpoint", I = "disableExceptionTracking", E = "ai.device.", b = "toLowerCase", w = "crossOrigin", N = "POST", e = "appInsightsSDK", t = y.name || "appInsights"; (y.name || T[e]) && (T[e] = t); var n = T[t] || function (d) {
+          var g = !1, f = !1, m = { initialize: !0, queue: [], sv: "5", version: 2, config: d }; function v(e, t) { var n = {}, a = "Browser"; return n[E + "id"] = a[b](), n[E + "type"] = a, n["ai.operation.name"] = S && S.pathname || "_unknown_", n["ai.internal.sdkVersion"] = "javascript:snippet_" + (m.sv || m.version), { time: function () { var e = new Date; function t(e) { var t = "" + e; return 1 === t.length && (t = "0" + t), t } return e.getUTCFullYear() + "-" + t(1 + e.getUTCMonth()) + "-" + t(e.getUTCDate()) + "T" + t(e.getUTCHours()) + ":" + t(e.getUTCMinutes()) + ":" + t(e.getUTCSeconds()) + "." + ((e.getUTCMilliseconds() / 1e3).toFixed(3) + "").slice(2, 5) + "Z" }(), iKey: e, name: "Microsoft.ApplicationInsights." + e.replace(/-/g, "") + "." + t, sampleRate: 100, tags: n, data: { baseData: { ver: 2 } } } } var h = d.url || y.src; if (h) {
+            function a(e) {
+              var t, n, a, i, r, o, s, c, u, p, l; g = !0, m.queue = [], f || (f = !0, t = h, s = function () {
+                var e = {}, t = d.connectionString; if (t) for (var n = t.split(";"), a = 0; a
+                  < n.length; a++) {
+                    var
+                    i = n[a].split("="); 2 === i.length && (e[i[0][b]()] = i[1])
+                } if (!e[C]) {
+                  var r = e.endpointsuffix, o = r ? e.location : null; e[C] = "
+                  https://"+(o?o+".":"")+"dc."+(r||"services.visualstudio.com")}return
+                  e
+                } (), c = s[D] || d[D] || "", u = s[C], p = u ? u + "/v2/track" : d.endpointUrl, (l = []).push((n = "SDK LOAD Failure: Failed to load Application Insights SDK script (See stack for details)"
+                  , a = t, i = p, (o = (r = v(c, "Exception")).data).baseType = "ExceptionData"
+                  , o.baseData.exceptions = [{
+                    typeName: "SDKLoadFailed", message: n.replace(/\./g, "-"), hasFullStack: !1, stack: n + "\nSnippet
+      failed to load ["+a+"] --Telemetry is disabled\nHelp Link:
+                      https://go.microsoft.com/fwlink/?linkid=2128109\nHost: "+(S&&S.pathname||"
+                    _unknown_")+"\nEndpoint: "+i,parsedStack:[]}],r)),l.push(function(e,t,n,a){var i=v(c,"
+      Message"),r=i.data;r.baseType="MessageData" ;var o=r.baseData;return o.message='AI (Internal): 99 message:"'
+                      + ("SDK LOAD Failure: Failed to load Application Insights SDK script (See stack for details)
+                        ("+n+")").replace(/\"/g,"")+'"',o.properties={endpoint:a},i}(0,0,t,p)),function(e,t){if(JSON){var
+      n = T.fetch; if(n&& !y.useXhr)n(t, { method: N, body: JSON.stringify(e), mode: "cors" });else if (XMLHttpRequest) {
+                  var a = new
+                    XMLHttpRequest; a.open(N, t), a.setRequestHeader("Content-type", "application/json"), a.send(JSON.stringify(e))
+                }
+              }} (l, p))
+          } function
+            i(e, t) { f || setTimeout(function () { !t && m.core || a() }, 500) } var e = function () {
+              var n = l.createElement(k); n.src = h; var
+                e = y[w]; return !e && "" !== e || "undefined" == n[w] || (n[w] = e), n.onload = i, n.onerror = a, n.onreadystatechange = function (e, t) { "loaded" !== n.readyState && "complete" !== n.readyState || i(0, t) }, n
+            }(); y.ld < 0 ? l.getElementsByTagName("head")[0].appendChild(e) : setTimeout(function () { l.getElementsByTagName(k)[0].parentNode.appendChild(e) }, y.ld || 0)
+        }try { m.cookie = l.cookie } catch (p) { } function
+          t(e) {
+            for (; e.length;)!function (t) {
+              m[t] = function () {
+                var
+                e = arguments; g || m.queue.push(function () { m[t].apply(m, e) })
+              }
+            }(e.pop())
+        } var n = "track", r = "TrackPage", o = "TrackEvent"
+          ; t([n + "Event", n + "PageView", n + "Exception", n + "Trace", n + "DependencyData", n + "Metric", n + "PageViewPerformance", "start" + r, "stop" + r, "start" + o, "stop" + o, "addTelemetryInitializer", "setAuthenticatedUserContext", "clearAuthenticatedUserContext", "flush"]), m.SeverityLevel = { Verbose: 0, Information: 1, Warning: 2, Error: 3, Critical: 4 }; var
+            s = (d.extensionConfig || {}).ApplicationInsightsAnalytics || {}; if (!0 !== d[I] && !0 !== s[I]) {
+              var c = "onerror"
+              ; t(["_" + c]); var u = T[c]; T[c] = function (e, t, n, a, i) {
+                var
+                r = u && u(e, t, n, a, i); return !0 !== r && m["_" + c]({ message: e, url: t, lineNumber: n, columnNumber: a, error: i }), r
+              }, d.autoExceptionInstrumented = !0
+            } return
+        m
+      }(y.cfg); function
+        a() { y.onInit && y.onInit(n) } (T[t] = n).queue && 0 === n.queue.length ? (n.queue.push(a), n.trackPageView({})) : a()}(window, document, {
+          src: "https://js.monitor.azure.com/scripts/b/ai.2.min.js", // The SDK URL Source // name: "appInsights" , //
+          Global SDK Instance name defaults to "appInsights" when not supplied // ld: 0, // Defines the load delay (in ms)
+      before attempting to load the sdk. - 1=block page load and add to head. (default)=0ms load after timeout, //
+          useXhr: 1, // Use XHR instead of fetch to report failures (if available), crossOrigin: "anonymous" , // When
+          supplied this will add the provided value as the cross origin attribute on the script tag // onInit: null, // Once
+      the application insights instance has loaded and initialized this callback function will be called with 1 argument
+      --the sdk instance(DO NOT ADD anything to the sdk.queue-- As they won't get called) cfg: { // Application
+      Insights Configuration instrumentationKey: "<%=process.env.APPINSIGHTS_INSTRUMENTATIONKEY%>" /* ...Other
+      Configuration Options... */ }}); </script>
+      <% } %>
 
-    <script>
-      if (!!window.MSInputMethodContext && !!document.documentMode) {
-        alert(
-          "Greetings Time Traveller!\n\nYou're still running Internet Explorer. I feel very sorry for you.\nTry using a real browser otherwise parts of this site will not work"
-        )
-      }
-    </script>
-  </head>
+        <script>
+          if (!!window.MSInputMethodContext && !!document.documentMode) {
+            alert(
+              "Greetings Time Traveller!\n\nYou're still running Internet Explorer. I feel very sorry for you.\nTry using a real browser otherwise parts of this site will not work"
+            )
+          }
+        </script>
+</head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <img src="/images/node-icon.png" class="align-top" />
-          <span class="ms-2">Node.js Demo</span>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarMain"
-          aria-controls="navbarMain"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">
+        <img src="/images/node-icon.png" class="align-top" />
+        <span class="ms-2">Node.js Demo</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMain"
+        aria-controls="navbarMain" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarMain">
-          <ul class="navbar-nav me-auto">
-            <li class="nav-item">
-              <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/info">
-                <i class="fas fa-info-circle fa-fw"></i>
-                Info
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/tools">
-                <i class="fas fa-tools fa-fw"></i>
-                Tools
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/monitor">
-                <i class="fas fa-chart-line fa-fw"></i>
-                Monitor
-              </a>
-            </li>
-            <%if (process.env.WEATHER_API_KEY) { %>
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/info">
+              <i class="fas fa-info-circle fa-fw"></i>
+              Info
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/tools">
+              <i class="fas fa-tools fa-fw"></i>
+              Tools
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/monitor">
+              <i class="fas fa-chart-line fa-fw"></i>
+              Monitor
+            </a>
+          </li>
+          <%if (process.env.WEATHER_API_KEY) { %>
             <li class="nav-item">
               <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/weather">
                 <i class="fas fa-cloud fa-fw"></i>
                 Weather
               </a>
             </li>
-            <% } %> <%if (process.env.TODO_MONGO_CONNSTR) { %>
-            <li class="nav-item">
-              <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/todo">
-                <i class="fas fa-check-square fa-fw"></i>
-                Todo
-              </a>
-            </li>
             <% } %>
-          </ul>
+              <%if (process.env.TODO_MONGO_CONNSTR) { %>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/todo">
+                    <i class="fas fa-check-square fa-fw"></i>
+                    Todo
+                  </a>
+                </li>
+                <% } %>
+        </ul>
 
-          <%if (process.env.AAD_APP_ID) { %>
+        <%if (process.env.ENTRA_APP_ID) { %>
           <ul class="navbar-nav d-flex">
-            &nbsp; <%if (typeof user === 'undefined') { %>
-            <li class="nav-item">
-              <a class="nav-link btn btn-info btn-lg mx-1 shadow" href="/login">
-                <i class="fas fa-user fa-fw"></i>
-                Login
-              </a>
-            </li>
-            <% } else { %>
-            <li class="nav-item">
-              <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/account">
-                <i class="fas fa-user-circle fa-fw"></i>
-                <%= user.account.name %>
-              </a>
-            </li>
-            <% } %>
+            &nbsp; <%if (typeof user==='undefined' ) { %>
+              <li class="nav-item">
+                <a class="nav-link btn btn-info btn-lg mx-1 shadow" href="/login">
+                  <i class="fas fa-user fa-fw"></i>
+                  Login
+                </a>
+              </li>
+              <% } else { %>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-success btn-lg mx-1 shadow" href="/account">
+                    <i class="fas fa-user-circle fa-fw"></i>
+                    <%= user.account.name %>
+                  </a>
+                </li>
+                <% } %>
           </ul>
           <% } %>
-        </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- prettier-ignore -->
-    <div class="container pt-4">
-  </body>
+  <!-- prettier-ignore -->
+  <div class="container pt-4">
+</body>
+
 </html>
